# tsool_rev

./: Cargo.toml
migrations/: 20240918192923_initial_todos.down.sql  20240918192923_initial_todos.up.sql  20240925193748_add_created_todos.down.sql  20240925193748_add_created_todos.up.sql  20241105181930_add_dailies.down.sql  20241105181930_add_dailies.up.sql
src/: app.rs  config.rs  db.rs  events.rs  handler.rs  main.rs  models.rs  tui.rs  ui.rs  widgets.rs
src/db/: getters.rs  setters.rs
src/widgets/: dailies.rs  goals.rs  todos.rs
