[package]
name = "tsool_new"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "~1", features = ["full"] }
sqlx = { version = "~0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
dotenvy = "~0.15"
chrono = { version = "~0.4", features = ["serde"] }
ratatui = { version = "~0.28", features = ["all-widgets"] }
crossterm = { version = "~0.28", features = ["event-stream"] }
futures = "~0.3"
